--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
         sudo apt-get install -yqq --no-install-recommends neovim pandoc luarocks
         luarocks --local install busted
     - name: Run the test suite
-      run: make test BUSTED=$HOME/.luarocks/bin/busted
+      run: script -c "make test BUSTED=$HOME/.luarocks/bin/busted"
   ci-osx:
     runs-on: macos-latest
     steps:
@@ -25,4 +25,4 @@ jobs:
         brew install neovim pandoc luarocks
         luarocks --local install busted
     - name: Run the test suite
-      run: make test BUSTED=$HOME/.luarocks/bin/busted
+      run: script -c "make test BUSTED=$HOME/.luarocks/bin/busted"
