--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,3 +26,5 @@ jobs:
         luarocks --local install busted
     - name: Run the test suite
       run: script -ec "make test BUSTED=$HOME/.luarocks/bin/busted"
+      env:
+        TERM: xterm
